# language-bridges

./: 0-AI-MANIFEST.a2ml  README.adoc  ROADMAP.adoc  TOPOLOGY.md  justfile
bridges/ada/: README.adoc  ada_zig_ffi.gpr
bridges/ada/examples/: basic_example.adb  callback_example.adb  examples.gpr  safety_example.adb
bridges/ada/src/: zig_ffi.ads
bridges/ada/zig-lib/: build.zig
bridges/bebop-v/: .gitignore  CLAUDE.md  Justfile  PROVEN-INTEGRATION.md  README.adoc  ROADMAP.adoc  config.ncl  mustfile
bridges/bebop-v/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
bridges/bebop-v/.well-known/: ai.txt  humans.txt  security.txt
bridges/bebop-v/docs/: 00-overview.adoc  10-architecture.adoc  20-wire-and-framing.adoc  30-ffi-contract.adoc  40-memory-model.adoc  50-testing.adoc  60-contributing-implementations.adoc  WHITEPAPER.adoc
bridges/bebop-v/v/: v.mod  (+3 more)
bridges/gleam/: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  gleam.toml
bridges/idris2/: .gitignore  0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  README.adoc  SECURITY.md  build.zig  build.zig.zon
bridges/ocaml/: 0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  dune-project
bridges/ocaml/.github/workflows/: codeql.yml
bridges/ocaml/lib/: zig_ffi.ml  zig_ffi.mli
bridges/ocaml/zig-lib/src/: lib.zig
bridges/polyglot/: README.adoc  README.md
bridges/rust/: README.adoc
bridges/swift/: .gitignore  0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  build.zig
(+45 files in other folders)
